kubernetes/apps/media/calibre/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre
  namespace: media
  labels:
    app: calibre
    version: latest
    type: third-party
    facing: internal
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: calibre
  template:
    metadata:
      labels:
        app: calibre
    spec:
      containers:
        - name: calibre
          image: linuxserver/calibre-web:latest
          ports:
            - name: "http-port"
              containerPort: 8083
              protocol: TCP
          volumeMounts:
            - name: calibre-config
              mountPath: /config
            - name: calibre-books
              mountPath: /books
          resources:
            requests:
              memory: '32Mi'
              cpu: '1m'
            limits:
              memory: '512Mi'
              cpu: '1000m'
      volumes:
        - name: calibre-config
          persistentVolumeClaim:
            claimName: calibre-config
        - name: calibre-books
          persistentVolumeClaim:
            claimName: calibre-books
